posts tag 수정과 collection 삭제

--- a/_posts/2020-06-29-array.md
+++ b/_posts/2020-06-29-array.md
@@ -2,11 +2,8 @@
 layout: post
 title: "배열(Array)"
 comments: true
-categories: 
-  - data-structure
 tags: 
-  - 자료구조
-  - 배열
+  - Data structure
 ---
 
 ### 배열 정의
