--- a/_posts/2020-07-1-queue.md
+++ b/_posts/2020-07-1-queue.md
@@ -2,11 +2,8 @@
 layout: post
 title: "큐(Queue)"
 comments: true
-categories: 
-  - data-structure
 tags: 
-  - 자료구조
-  - 큐
+  - Data structure
 ---
 ### 큐 정의
 
