--- a/_posts/2020-07-1-stack.md
+++ b/_posts/2020-07-1-stack.md
@@ -2,11 +2,8 @@
 layout: post
 title: "스텍(Stack)"
 comments: true
-categories: 
-  - data-structure
 tags: 
-  - 자료구조
-  - 스텍
+  - Data structure
 ---
 
 ### 스택 정의
