--- a/_posts/2020-07-6-tree.md
+++ b/_posts/2020-07-6-tree.md
@@ -2,11 +2,8 @@
 layout: post
 title: "트리(Tree)"
 comments: true
-categories: 
-  - data-structure
 tags: 
-  - 자료구조
-  - 트리
+  - Data structure
 ---
 
 ### 트리 정의
