--- a/_posts/2020-07-7-graph.md
+++ b/_posts/2020-07-7-graph.md
@@ -2,11 +2,8 @@
 layout: post
 title: "그래프(Graph)"
 comments: true
-categories: 
-  - data-structure
 tags: 
-  - 자료구조
-  - 그래프
+  - Data structure
 ---
 
 ### 그래프 정의
