--- a/_posts/2020-07-12-sorting.md
+++ b/_posts/2020-07-12-sorting.md
@@ -2,11 +2,8 @@
 layout: post
 title: "정렬 알고리즘(Sorting)"
 comments: true
-categories: 
-  - data-structure
 tags: 
-  - 알고리즘
-  - 정렬
+  - Algorithm
 ---
 
 ### 정렬 알고리즘 정의
