--- a/_posts/2020-07-2-list.md
+++ b/_posts/2020-07-2-list.md
@@ -2,11 +2,8 @@
 layout: post
 title: "리스트(List)"
 comments: true
-categories: 
-  - data-structure
 tags: 
-  - 자료구조
-  - 리스트
+  - Data structure
 ---
 
 ### 리스트 정의
