--- a/_posts/2021-01-12-java-jvm.md
+++ b/_posts/2021-01-12-java-jvm.md
@@ -1,10 +1,7 @@
 ---
 layout: post
 title: "JVM에 대한 이해와 JVM 구조 살펴보기"
-comments: true
-tags: 
-  - Java
-  - JVM
+categories: [Java, JVM]
 ---
 ### JVM 이란?
 
