DOC(process): 오탈자 및 문구 수정
- 어색한 문구 및 오탈자 수정

--- a/_posts/2022-03-12-Process.md
+++ b/_posts/2022-03-12-Process.md
@@ -9,9 +9,9 @@ excerpt: 프로세스 개념과 프로세스의 상태를 알아본다.
 
 ![Process01](/assets/images/os/process/process01.png)
 
-프로세스는 실행중인 프로그램을 얘기한다. 즉 하드 디스크에 실행파일로 존재했던 프로그램이 메모리에 올라와 실행중인 상태가 되면 비로서 프로세스가 된다. 프로세스에는 프로세스 문맥이라는 것이 존재한다. 프로세스 문맥은 프로세스 수행 상태 정보를 담고 있다.  
-왜 프로세스 문맥은 프로세스 수행 상태를 담는지 의문이 들 수 있다. 우리는 컴퓨터를 사용할때 하나의 프로세스만 사용하게 된다면 CPU는 해당 프로세스만 전담해서 처리하면 되기에 프로세스 상태 정보가 필요 없을 수 있다. 하지만 현재 우리는 여러 프로그램을 동시간 사용할 수 있기 위해 여러 프로세스가 메모리에 존재할 수 밖에 없다.  
-프로세스들은 CPU를 Time sharing하면서 CPU 점유하여 명령어를 수행하게 되는데, 이때 프로세스의 문맥의 정보를 통해 프로세스가 다음 프로세스에게 CPU를 넘기고 다시 CPU를 점유하더라도 다음 명령어 수행 주소를 알기에 자연스럽게 프로세스 명령을 수행할 수 있다.  
+프로세스는 실행중인 프로그램을 얘기한다. 즉 하드 디스크에 실행파일로 존재했던 프로그램이 메모리에 올라와 실행중인 상태가 되면 비로서 프로세스가 된다. 프로세스에는 프로세스 문맥이라는 것이 존재하는데 프로세스 문맥은 프로세스 수행 상태 정보를 담고 있다.  
+왜 프로세스 문맥은 프로세스 수행 상태를 담는지 의문이 들 수 있다. 우리는 컴퓨터를 사용할때 하나의 프로세스만 사용하게 된다면 CPU는 해당 프로세스만 전담해서 처리하면 되기에 프로세스 상태 정보가 필요 없을 수 있다. 하지만 현재 우리는 컴퓨터를 사용할때 여러 프로그램을 실행시켜 사용하기에 많은 프로세스가 메모리에 존재할 수 밖에 없다.  
+프로세스들은 CPU를 Time sharing하면서 CPU 점유하여 명령어를 수행하게 되는데, 프로세스가 다음 프로세스에게 CPU를 넘길때 프로세스 문맥을 저장하고 넘겨 받은 프로세스는 저장된 문맥 정보를 통해 다음 수행할 명령어를 바로 수행할 수 있게 된다.  
 프로세스 문맥은 크게 세가지로 나타낼 수 있다.
 
 - 하드웨어 문맥
@@ -20,7 +20,7 @@ excerpt: 프로세스 개념과 프로세스의 상태를 알아본다.
 
 하드웨어 문맥은 프로세스가 명령어를 수행하기 위해서는 CPU를 점유해서 명령어를 수행하게 되는데 이때 프로세스 명령어가 어디까지 수행되었는지(Program Counter) 어떤 값을 담고 있는지(Register)가 필요하다. 이러한 정보를 담고 있는것이 하드웨어 문맥이다.  
 프로세스 주소 공간은 메모리와 관련된 부분으로써 프로세스의 Stack, Data, Code에 어떤 내용이 담겨있는지 알아야 프로세스 수행 상태를 정확히 나타낼 수 있다.  
-프로세스 관련 커널 자료구조는 운영체제가 프로세스들을 관리하면서 프로세스에게 CPU를 얼마나 할당시킬 것인지 메모리를 얼마나 줄 것인지 그리고 프로세스가 어떤 상태를 수행하고 있는지에 대해 알아야 할 필요가 있다. 프로세스를 관리하기 위해 PCB(Process Control Block)라는 자료구조를 두게되며 프로세스 별로 PCB가 존재하게 된다. Kernel Stack의 경우 프로세스가 System Call을 호출하여 Kernel의 함수를 수행 할때가 있다. 이때 PC는 프로세스 Code부분에서 Kernel의 Code 가리키며 수행하게 되는데 이러한 수랭정보를 프로세스 별로 Kernel의 어느 함수를 수행하고 있는지 정보를 Kernel Stack에 담게 된다.
+프로세스 관련 커널 자료구조는 운영체제가 프로세스들을 관리하면서 프로세스에게 CPU를 얼마나 할당시킬 것인지 메모리를 얼마나 줄 것인지 그리고 프로세스가 어떤 상태를 수행하고 있는지에 대해 알아야 할 필요가 있다. 프로세스를 관리하기 위해 PCB(Process Control Block)라는 자료구조를 두게되며 프로세스 별로 PCB가 존재하게 된다. Kernel Stack의 경우 프로세스가 System Call을 호출하여 Kernel의 함수를 수행 할때가 있다. 이때 PC는 프로세스 Code부분에서 Kernel의 Code 가리키며 Kernel의 함수를 수행하게 되는데 이러한 함수 수행정보를 프로세스 별로 Kernel Stack에 담게 된다.
 
 ## Process State
 
@@ -125,7 +125,7 @@ CPU를 점유하여 명령어 처리 수행되던 프로세스가 Timer 및 I/O 
 ![Process10](/assets/images/os/process/process10.png)
 ![Process09](/assets/images/os/process/process09.png)
 
-위 내용에서 Process State에 대한 설명을 이해했을거라 생각한다. 여기서 추가된 부분은 Suspended 부분이다. 외부 요인에 의해 프로세스가 메모리에서 디스크에 swap out된 상태를 얘기한다. Suspended는 결코 block 상태와 같지 않다. block 상태된 프로세스의 경우 event가 만족되면 ready 상태가 되지만 suspended는 외부에서 resume 해주어야 active 상태가 된다. suspended는 어떤 요인에 의해 발생하게 되는것일까??  
+위 내용에서 Process State에 대한 설명을 이해했을거라 생각한다. 여기서 추가된 부분은 Suspended 부분이다. 외부 요인에 의해 프로세스가 메모리에서 디스크로 swap out된 상태를 얘기한다. Suspended는 결코 block 상태와 같지 않다. block 상태된 프로세스의 경우 event가 만족되면 ready 상태가 되지만 suspended는 외부에서 resume 해주어야 active 상태가 된다. suspended는 어떤 요인에 의해 발생하게 되는것일까??  
 사용자에 의해 의도적으로 중지 시킨 프로세스 상태와 메모리에 올라온 프로그램수를 조절하기 위해 Process Scheduler중 Medium-term scheduler에 의해 디스크로 swap out되었을때가 있다.
 이렇게 해서 추가적인 프로세스 상태인 Suspended까지 알게 됐다.
 
