DOC(process): 어색한 문구 수정
- 문맥에 어색한 문구 수정

--- a/_posts/2022-03-12-Process.md
+++ b/_posts/2022-03-12-Process.md
@@ -126,7 +126,7 @@ CPU를 점유하여 명령어 처리 수행되던 프로세스가 Timer 및 I/O 
 ![Process09](/assets/images/os/process/process09.png)
 
 위 내용에서 Process State에 대한 설명을 이해했을거라 생각한다. 여기서 추가된 부분은 Suspended 부분이다. 외부 요인에 의해 프로세스가 메모리에서 디스크로 swap out된 상태를 얘기한다. Suspended는 결코 block 상태와 같지 않다. block 상태된 프로세스의 경우 event가 만족되면 ready 상태가 되지만 suspended는 외부에서 resume 해주어야 active 상태가 된다. suspended는 어떤 요인에 의해 발생하게 되는것일까??  
-사용자에 의해 의도적으로 중지 시킨 프로세스 상태와 메모리에 올라온 프로그램수를 조절하기 위해 Process Scheduler중 Medium-term scheduler에 의해 디스크로 swap out되었을때가 있다.
+사용자에 의해 의도적으로 중지 시켰을 때 그리고 메모리에 올라온 프로그램수를 조절하기 위해 Process Scheduler중 Medium-term scheduler에 의해 디스크로 swap out되었을때가 있다.
 이렇게 해서 추가적인 프로세스 상태인 Suspended까지 알게 됐다.
 
 ## 참조
