DOC(thread): 스레드 thread excerpt 수정 및 내용 수정
- excerpt 수정 및 내용 수정

--- a/_posts/2022-03-14-thread.md
+++ b/_posts/2022-03-14-thread.md
@@ -2,7 +2,7 @@
 layout: post
 title: Thread
 categories: [OS, Thread, Java]
-excerpt: Thread 개념과 Thread 모델, 구성 요소를 알아보며 Java의 Thread는 어떻게 구성되어 있는가 알아본다.
+excerpt: Thread 개념과 구성 요소를 알아보며 Java의 Thread는 어떻게 구성되어 있는가 알아본다.
 ---
 
 ## Thread
@@ -80,7 +80,7 @@ excerpt: Thread 개념과 Thread 모델, 구성 요소를 알아보며 Java의 T
 ![jvm-thread-flow](/assets/images/os/thread/jvm-thread-flow.png)
 
 Java는 Java8 기준으로 사용자 레벨 thread를 사용하지 않는다. 이전까지는 Green Thread를 사용했다고 한다.  
-Java는 JVM을 통해 System Call 호출하여 Kernel Thread를 할당 받는다. 할당 받은 Kernel Thread는 Java Thread와 1:1 매핑된다. Kernel Thread와 1:1 매핑되는만큼 운영체제마다 Kernel Thread 생성 제한이 있는데 Java를 통해 Multi Thread 환경을 구성할때는 운영체제의 Kernel Thread 정책을 알아보자.
+Java는 JVM을 통해 System Call 호출하여 Kernel Thread를 할당 받는다. 할당 받은 Kernel Thread는 Java Thread와 1:1 매핑된다. Kernel Thread와 1:1 매핑되는만큼 운영체제마다 Kernel Thread 생성 수 제한이 있는데 Java를 통해 Multi Thread 환경을 구성할때는 운영체제의 Kernel Thread 정책을 알아보고 구성하거나 제한을 해야할것 같다.
 
 ## 참조
 
