DOC(thrad): 어색한 문구 및 설명 문구 추가
- 문구 수정 및 설명 뒷받침할 문구 추가

--- a/_posts/2022-03-14-thread.md
+++ b/_posts/2022-03-14-thread.md
@@ -12,7 +12,8 @@ excerpt: Thread 개념과 구성 요소를 알아보며 Java의 Thread는 어떻
 - 하드웨어 스레드
 - 소프트웨어 스레드
 
-우리가 이번에 학습할 내용은 소프트웨어 스레드 내용이다.
+하드웨어 스레드 관련해서는 [Core의 Thread는 무엇인가?](https://jun7343.github.io/os/thread/multi%20threading/hyper%20threading/2022/01/02/core-thread/) 글에 하드웨어 스레드 관련 Hyper Thread 포스트가 있다. 궁금하다면 읽어보는 것을 추천한다.  
+이번 포스트는 소프트웨어 스레드 내용이다.
 ![thread02](/assets/images/os/thread/thread02.png)
 ![thread01](/assets/images/os/thread/thread01.png)
 
@@ -32,7 +33,7 @@ excerpt: Thread 개념과 구성 요소를 알아보며 Java의 Thread는 어떻
 - Multi Process 대비 수행속도가 증가한다. (스레드끼리 협력하여)
 - 특정 Thread에서 장애가 발생시 해당 프로세스에 영향이 미치기에 다른 Thread에도 영향을 받을 수 있다.
 
-이렇게 Multi Process와 Multi Thread의 간략한 설명을 볼 수 있었다. Multi Process의 경우 추후 학습 진행하기에 나중 포스터에서 더 자세히 다루도록 할 것이다. 우리는 Multi Thread를 실생활 어떤 프로그램에서 어떻게 경험했을까?? 대표적으로 웹 브라우저 랜더링으로 설명할 수 있다. 우리가 네이버에 접속한다 가정해보자. 브라우저를 통해서 네이버에 접속하게 되면 html 정보를 받을 것이다. html 정보를 랜더링하며 html안 텍스트가 차례로 노출된다. 만약 html 코드안에 이미지 정보가 있으면 이미지가 로드를 진행하고 이미지 로드가 완료되면 그때 노출되게 된다.  
+이렇게 Multi Process와 Multi Thread의 간략한 설명을 볼 수 있었다. Multi Process의 경우 추후 학습 진행하기에 나중 포스터에서 더 자세히 다루도록 할 것이다. 우리는 Multi Thread를 실생활 어떤 프로그램에서 어떻게 경험했을까?? 대표적으로 웹 브라우저 랜더링으로 설명할 수 있다. 우리가 네이버에 접속한다 가정해보자. 브라우저를 통해서 네이버에 접속하게 되면 html 정보를 받을 것이다. html 정보를 랜더링하며 html안 텍스트가 차례로 노출된다. 만약 html 코드안에 이미지 정보가 있으면 이미지가 로드를 진행하고 html 안의 나머지 텍스트 및 태그는 계속 랜더링 되고 이미지 로드가 완료될때 그때 이미지가 노출되게 된다.  
 이때 우리가 알 수 있는것은 이미지가 로드가 다 되지 않았는데 텍스트를 먼저 볼 수 있다는 점이다. 만약 단일 스레드를 통해 브라우저를 랜더링 한다하면 이미지를 서버로 부터 로드하기 위해 사용자는 하염없이 기다리게 된다. 사용자가 하염없이 기다릴수는 없기에 멀티 스레드를 통해 html의 정보를 랜더링할때 이미지 정보를 발견하게 된다면 이미지를 서버로 부터 불러드릴때 해당 스레드는 block 상태가 된다. 그리고 나머지 스레드의 경우 html 랜더링을 마저 진행하여 텍스트라도 먼저 확인할 수 있었던 것이다.
 
 ## Thread 장점
@@ -80,7 +81,8 @@ excerpt: Thread 개념과 구성 요소를 알아보며 Java의 Thread는 어떻
 ![jvm-thread-flow](/assets/images/os/thread/jvm-thread-flow.png)
 
 Java는 Java8 기준으로 사용자 레벨 thread를 사용하지 않는다. 이전까지는 Green Thread를 사용했다고 한다.  
-Java는 JVM을 통해 System Call 호출하여 Kernel Thread를 할당 받는다. 할당 받은 Kernel Thread는 Java Thread와 1:1 매핑된다. Kernel Thread와 1:1 매핑되는만큼 운영체제마다 Kernel Thread 생성 수 제한이 있는데 Java를 통해 Multi Thread 환경을 구성할때는 운영체제의 Kernel Thread 정책을 알아보고 구성하거나 제한을 해야할것 같다.
+Java는 JVM을 통해 System Call 호출하여 Kernel Thread를 할당 받는다. 할당 받은 Kernel Thread는 Java Thread와 1:1 매핑된다. Kernel Thread와 1:1 매핑되는만큼 운영체제마다 Kernel Thread 생성 수 제한이 있는데 Java를 통해 Multi Thread 환경을 구성할때는 운영체제의 Kernel Thread 정책을 알아보고 구성하거나 제한을 해야할것 같다.  
+Java Thread Model 관련해서 궁금하다면 해당 글을 읽어보자. [Multithreading Models - Oracle](https://docs.oracle.com/cd/E19620-01/805-4031/6j3qv1oej/index.html)
 
 ## 참조
 
